translation-tool/inputs/source_meta/objects/HNSSERVICEORDERVIEW__x.object
<CustomObject>
    <description>HNSSERVICEORDERVIEW</description>
    <externalDataSource>PSView</externalDataSource>
    <externalName>HNSSERVICEORDERVIEW</externalName>
    <fields>
        <fullName>CASE_NUMBER__c</fullName>
        <description>CASE_NUMBER</description>
        <externalDeveloperName>CASE_NUMBER</externalDeveloperName>
        <label>CASE_NUMBER</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>COMPANY_ID__c</fullName>
        <description>COMPANY_ID</description>
        <externalDeveloperName>COMPANY_ID</externalDeveloperName>
        <label>COMPANY_ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_BY__c</fullName>
        <description>CREATED_BY</description>
        <externalDeveloperName>CREATED_BY</externalDeveloperName>
        <label>CREATED_BY</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CREATED_DATE__c</fullName>
        <description>CREATED_DATE</description>
        <externalDeveloperName>CREATED_DATE</externalDeveloperName>
        <label>CREATED_DATE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DSS_ORDER_ID__c</fullName>
        <description>DSS_ORDER_ID</description>
        <externalDeveloperName>DSS_ORDER_ID</externalDeveloperName>
        <label>DSS_ORDER_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LAST_SAO_TYPE__c</fullName>
        <description>LAST_SAO_TYPE</description>
        <externalDeveloperName>LAST_SAO_TYPE</externalDeveloperName>
        <label>LAST_SAO_TYPE</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODIFIED_BY__c</fullName>
        <description>MODIFIED_BY</description>
        <externalDeveloperName>MODIFIED_BY</externalDeveloperName>
        <label>MODIFIED_BY</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MODIFIED_DATE__c</fullName>
        <description>MODIFIED_DATE</description>
        <externalDeveloperName>MODIFIED_DATE</externalDeveloperName>
        <label>MODIFIED_DATE</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_STATUS__c</fullName>
        <description>ORDER_STATUS</description>
        <externalDeveloperName>ORDER_STATUS</externalDeveloperName>
        <label>ORDER_STATUS</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_SUB_TYPE__c</fullName>
        <description>ORDER_SUB_TYPE</description>
        <externalDeveloperName>ORDER_SUB_TYPE</externalDeveloperName>
        <label>ORDER_SUB_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ORDER_TYPE__c</fullName>
        <description>ORDER_TYPE</description>
        <externalDeveloperName>ORDER_TYPE</externalDeveloperName>
        <label>ORDER_TYPE</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SERVICE_ORDER_ID__c</fullName>
        <description>SERVICE_ORDER_ID</description>
        <externalDeveloperName>SERVICE_ORDER_ID</externalDeveloperName>
        <label>SERVICE_ORDER_ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SITE_NAME__c</fullName>
        <description>SITE_NAME</description>
        <externalDeveloperName>SITE_NAME</externalDeveloperName>
        <label>SITE_NAME</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>HNSSERVICEORDERVIEW</label>
    <pluralLabel>HNSSERVICEORDERVIEW</pluralLabel>
</CustomObject>